--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -21,3 +20,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+/bin/
+**/target/classes/
+**/target/dependency/
+**/target/dependency-maven-plugin-markers/
+**/target/generated-classes/
+**/target/generated-sources/
+**/target/generated-test-sources/
+**/target/maven-archiver/
+**/target/maven-status/
+**/target/surefire-reports/
+**/target/test-classes/
+**/target/*-1.0.jar
+**/target/*.jar.original
+**/target/site/
